--- a/public/wp-content/themes/blackrock/scss/modules/_map.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_map.scss
@@ -14,13 +14,11 @@
 
         h2 {
             @include headline-30;
-            margin-top: 0;
-            margin-bottom: 40px;
+            margin: 100px 20px 40px 20px;
 
             @media #{$mq-tablet-port} {
                 @include headline-50;
-                margin-top: 0;
-                margin-bottom: 0;
+                margin: 0;
             }
         }
     }
