--- a/public/wp-content/themes/blackrock/scss/modules/_two_col_image.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_two_col_image.scss
@@ -43,9 +43,17 @@
     }
 
     &.big-small {
+        display: grid;
+        margin: 100px 20px 0 20px;
+        grid-gap: 10px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: "left right";
+        align-items: end;
+
         @media #{$mq-tablet-desk} {
             grid-template-columns: 6fr 3fr 3fr;
             grid-template-areas: "left . right";
+            align-items: normal;
         }
 
         div {
@@ -58,6 +66,41 @@
                     align-self: center;
                 }
             }
+        }
+    }
+
+    &.small-land {
+        display: grid;
+        margin: 100px 20px 0 20px;
+        grid-gap: 10px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: "left right";
+        align-items: end;
+
+        @media #{$mq-tablet-port} {
+            display: grid;
+            grid-gap: 10px;
+            margin: calc(100vw /12) 40px 0 40px;
+            grid-template-columns: 1fr 1fr;
+            grid-template-areas: "left right";
+            align-items: normal;
+        }
+
+        @media #{$mq-tablet-desk} {
+            grid-template-columns: 3fr 1fr 8fr;
+            grid-template-areas: "left . right";
+        }
+
+        div {
+            &:first-of-type {
+                grid-area: left;
+
+                @media #{$mq-tablet-port} {
+                    align-self: center;
+                }
+            }
+
+            grid-area: right;
         }
     }
 
