more tweaks and updates from some deep dive responsiveness testing

--- a/public/wp-content/themes/blackrock/scss/layout/_header.scss
+++ b/public/wp-content/themes/blackrock/scss/layout/_header.scss
@@ -215,7 +215,7 @@
 		}
 
 		.menu li.current_page_item a {
-			border-bottom: 2px solid $br-black;
+			border-bottom: 2px solid $br-blue;
 		}
 	}
 
