--- a/public/wp-content/themes/blackrock/scss/modules/_copy_two_images.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_copy_two_images.scss
@@ -24,7 +24,7 @@
 		grid-area: copy;
 
 		@media #{$mq-tablet-port} {
-			padding: 0 0 calc(100vw / 12) 0;
+			padding: calc(100vw / 12) 0 calc(100vw / 12) 0;
 		}
 
 		p {
