--- a/public/wp-content/themes/blackrock/scss/modules/_contact.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_contact.scss
@@ -55,9 +55,8 @@
 					@media #{$mq-tablet-port} {
 						width: auto;
 						margin-left: 0;
-						margin-bottom: 0;
 						margin-top: calc(100vw / 12);
-						margin-bottom: 40px;
+						margin-bottom: 60px;
 					}
 				}
 			}
@@ -123,6 +122,7 @@
 			@media #{$mq-tablet-port} {
 				position: sticky;
 				top: 0;
+				align-self: end;
 			}
 		}
 	}
