--- a/public/wp-content/themes/blackrock/scss/modules/_modal_popup.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_modal_popup.scss
@@ -15,8 +15,8 @@
 
     .close {
         position: absolute;
-        top: 20px;
-        right: 20px;
+        top: 10px;
+        right: 10px;
         width: 32px;
         height: 32px;
         border: 0;
@@ -24,6 +24,11 @@
         padding: 0;
         background-color: transparent;
         z-index: 10;
+
+        @media #{$mq-desk-small} {
+            top: 20px;
+            right: 20px;
+        }
 
         svg {
             pointer-events: none;
