--- a/public/wp-content/themes/blackrock/scss/modules/_title_multiple_columns.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_title_multiple_columns.scss
@@ -1,54 +1,69 @@
 .title-multiple-columns {
-    margin-top: 40px;
-    
-    @media #{$mq-tablet-port}{
-        margin-top: calc(100vw / 12);
-    }
-    
-    .title {
-        @include grid;
-        
-        @media #{$mq-tablet-port}{
-            grid-template-columns: 5fr 7fr;
-        }
+	margin-top: 40px;
+
+	@media #{$mq-tablet-port} {
+		margin-top: calc(100vw / 12);
+	}
+
+	.title {
+		@include grid;
+
+		@media #{$mq-tablet-port} {
+			grid-template-columns: 9fr 3fr;
+		}
+
+		@media #{$mq-tablet-desk} {
+			grid-template-columns: 8fr 4fr;
+		}
+
+		@media #{$mq-desk-small} {
+			grid-template-columns: 5fr 7fr;
+		}
+
+		h2 {
+			@include headline-30;
+			padding: 20px 0 40px 20px;
+
+			@media #{$mq-tablet-port} {
+				padding: 20px 0 40px 0;
+			}
+
+			@media #{$mq-tablet-desk} {
+				padding: 0;
+				@include headline-50;
+				margin-bottom: calc(100vw / 24);
+			}
+		}
+	}
 
 
-        h2 {
-            @include headline-30;
-            padding: 20px;
-            
-            @media #{$mq-tablet-port}{
-                padding: 0;
-                @include headline-50;
-                margin-bottom: calc(100vw / 24);
-            }
-        }
-    }
+	.copy-blocks {
+		@include grid;
 
+		@media #{$mq-tablet-port} {
+			grid-template-columns: repeat(2, 1fr);
+		}
 
-    .copy-blocks {
-        @include grid;
-        
-        @media #{$mq-tablet-port}{
-            grid-template-columns: repeat(4, 1fr);
-        }  
+		@media #{$mq-tablet-desk} {
+			grid-template-columns: repeat(4, 1fr);
+		}
 
-        .copy-block {
-            border-top: 2px solid $br-black;
-            margin: 20px;
-            padding: 10px 0 20px 0;
+		.copy-block {
+			border-top: 2px solid $br-black;
+			margin: 20px;
+			padding: 10px 0 20px 0;
 
-            @media #{$mq-tablet-port}{
-                margin: 0;
-            }
+			@media #{$mq-tablet-port} {
+				margin: 0;
+			}
 
-            h3 {
-                @include headline-20;
-            }
+			h3 {
+				@include headline-20;
+			}
 
-            p {
-                @include body-20;
-            }
-        }
-    }
+			p {
+				@include body-20;
+			}
+		}
+	}
 }
