addressing all but the book font weight issues in first feedback figma

--- a/public/wp-content/themes/blackrock/scss/elements/_buttons.scss
+++ b/public/wp-content/themes/blackrock/scss/elements/_buttons.scss
@@ -46,29 +46,29 @@ a.button {
 .page-white {
 
     a.button {
-        border: 1px solid $br-white;
-        color: $br-black;
+        border: 1px solid $br-blue;
+        color: $br-blue;
 
         &:active,
         &:visited {
-            color: $br-black;
+            color: $br-blue;
         }
 
         svg {
 
             path {
-                stroke: $br-black;
+                stroke: $br-blue;
             }
         }
 
         &:hover {
-            background-color: $br-white;
-            color: $br-black;
+            background-color: $br-blue  !important;
+            color: $br-white  !important;
 
             svg {
 
                 path {
-                    stroke: $br-black;
+                    stroke: $br-white  !important;
                 }
             }
         }
