--- a/public/wp-content/themes/blackrock/scss/modules/_home_hero.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_home_hero.scss
@@ -1,5 +1,10 @@
 #home-hero {
 	z-index: 2;
+
+	h2,
+	p {
+		color: $br-white;
+	}
 }
 
 .mobile-header-background {
@@ -84,12 +89,14 @@
 		}
 
 		h2 {
-			@include headline-30;
+			@include body-35;
 			margin-top: 70px;
 			margin-bottom: 20px;
+			font-weight: normal;
 
 			@media #{$mq-tablet-port} {
 				margin-top: 150px;
+				font-size: 40px;
 			}
 		}
 
@@ -106,7 +113,11 @@
 
 				margin-left: 50%;
 				transform: translateX(-50%);
-				max-width: (100vw / 3);
+				max-width: 50vw;
+			}
+
+			@media #{$mq-tablet-desk} {
+				max-width: calc(100vw / 3);
 			}
 
 		}
