--- a/public/wp-content/themes/blackrock/scss/modules/_one_col_copy_image.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_one_col_copy_image.scss
@@ -91,7 +91,8 @@
         }
 
         &:last-of-type {
-            margin-top: 0;
+            margin-top: 5px;
+            font-size: 20px;
         }
 
         span {
