--- a/public/wp-content/themes/blackrock/scss/variables/_colours.scss
+++ b/public/wp-content/themes/blackrock/scss/variables/_colours.scss
@@ -3,3 +3,20 @@ $br-cream: #F3EADF;
 $br-grey: #5B5B5B;
 $br-black: #000000;
 $br-white: #FFFFFF;
+
+.page-cream,
+.page-white {
+  section {
+
+    a,
+    p,
+    h1,
+    h2,
+    h3,
+    h4,
+    ul,
+    li {
+      color: $br-grey;
+    }
+  }
+}
